--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1 class=h1>Welcome to my Web App !</h1>
   <p>This is a simple web application For Lab 2.</p>
+  <p>new modification</p>
   <script src="script.js"></script>
 </body>
 </html>
